# Operit2

./: .gitignore  .last_build_id  BUILDING.md  CNAME  README.md  flutter_bootstrap.js  index.html  operit_flutter_bridge.d.ts  operit_flutter_bridge.js  operit_flutter_bridge_bg.wasm.d.ts  operit_flutter_bridge_worker.js  operit_model_install_worker.js  operit_runtime_bridge.js  v86_runtime_worker.js  version.json  web_access_version.json
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: access.rs  bootstrap.rs  browser_callback.rs  chat_runtime.rs  client_paths.rs  core_proxy.rs  error.rs  main.rs  web_access_assets.rs
apps/cli/src/cli/: access.rs  chat.rs  host_ops.rs  link.rs  market.rs  mcp.rs  mod.rs  package.rs  skill.rs  transfer.rs  web_access.rs
apps/cli/src/tui/: app.rs  helpers.rs  i18n.rs  mod.rs  render.rs
core/crates/operit-cli/: Cargo.toml
core/crates/operit-cli/src/: main.rs
core/crates/operit-command-core/: Cargo.toml  README.md
core/crates/operit-command-core/src/: lib.rs  output.rs
core/crates/operit-core-proxy/: Cargo.toml  README.md  build.rs  build_dart_codegen.rs  build_model.rs  build_platform_api_guard.rs  build_rust_codegen.rs  build_rust_codegen_utils.rs  build_rust_dispatch_codegen.rs  build_rust_proxy_codegen.rs  build_rust_schema_codegen.rs  build_scanner.rs  build_type_resolver.rs  build_utils.rs
core/crates/operit-core-proxy/src/: RuntimeCoreRouter.rs  RuntimeRemoteLinkDiscovery.rs  RuntimeRemoteLinkService.rs  lib.rs
core/crates/operit-core-proxy/tests/: shared_concurrency_test.rs
core/crates/operit-host-api/: Cargo.toml  README.md
core/crates/operit-host-api/src/: HostManager.rs  TimeUtils.rs  lib.rs
core/crates/operit-js-bridge/: Cargo.toml  README.md
core/crates/operit-js-bridge/src/: lib.rs
core/crates/operit-link/: Cargo.toml  README.md
core/crates/operit-link-access/: Cargo.toml
core/crates/operit-link-access/src/: lib.rs  tests.rs
core/crates/operit-link/benches/: browser_surface_codec_bench.rs  dispatcher_call_bench.rs  link_stress_bench.rs  protocol_codec_bench.rs  watch_channel_bench.rs
core/crates/operit-link/benches_data/: call_large.json  call_small.json  watch_events.ndjson
core/crates/operit-link/src/: client.rs  codec.rs  http.rs  http_protocol.rs  lib.rs  protocol.rs  remote.rs
core/crates/operit-link/tests/: dispatcher_behavior_test.rs  protocol_roundtrip_test.rs
core/crates/operit-local-models/: Cargo.toml  README.md
core/crates/operit-local-models/src/: LocalEngineCatalog.rs  LocalEngineDownload.rs  LocalEngineManifest.rs  LocalInference.rs  LocalModelCatalog.rs  LocalModelDownload.rs  LocalModelManifest.rs  LocalModelProvider.rs  LocalModelRegistry.rs  LocalModelRegistryStore.rs  LocalModelStorage.rs  lib.rs  runtime_support.rs
core/crates/operit-model/: Cargo.toml  README.md
core/crates/operit-model/collects/: ModelCatalog.rs
core/crates/operit-model/src/: ActivePrompt.rs  CharacterCard.rs  CharacterGroupCard.rs  ChatHistoryListItem.rs  ChatMainState.rs  ChatMessage.rs  ChatMessageTimestampAllocator.rs  Memory.rs  ModelCatalog.rs  ModelConfigData.rs  PromptTag.rs  PromptTurn.rs  SttCatalog.rs  SttConfig.rs  TtsCatalog.rs  TtsConfig.rs  lib.rs
core/crates/operit-plugin-sdk/: Cargo.toml  README.md  build.rs
core/crates/operit-plugin-sdk-codegen/: Cargo.toml
core/crates/operit-plugin-sdk-codegen/src/: declarations.rs  lib.rs  main.rs  registration.rs  runtime_bindings.rs
core/crates/operit-plugin-sdk/src/: JsExecutionScriptBuilder.rs  JsPackageLoader.rs  JsTools.rs  PackageManager.rs  execution_result.rs  javascript.rs  lib.rs  package.rs
core/crates/operit-providers/: Cargo.toml  README.md
core/crates/operit-providers/src/: lib.rs  runtime_support.rs
core/crates/operit-runtime/: Cargo.toml  README.md  build.rs
core/crates/operit-runtime/src/: R.rs  lib.rs
core/crates/operit-store/: Cargo.toml  README.md
core/crates/operit-store/src/: ObjectBoxStore.rs  PreferencesDataStore.rs  PreferencesEncryption.rs  RuntimeStorageHost.rs  RuntimeStorageLayout.rs  RuntimeStorePaths.rs  SqliteStore.rs  SyncOperationStore.rs  lib.rs
core/crates/operit-tools/: Cargo.toml  README.md  build.rs
core/crates/operit-tools/src/: ConversationMarkupManager.rs  ToolExecutionManager.rs  lib.rs  runtime_support.rs
core/crates/operit-util/: Cargo.toml  README.md
core/crates/operit-util/src/: AppLogger.rs  ChainLogger.rs  ChatMarkupRegex.rs  ChatUtils.rs  GithubReleaseUtil.rs  ImagePoolManager.rs  LocaleUtils.rs  MarkdownRenderStream.rs  MediaPoolManager.rs  OCRUtils.rs  OperitPaths.rs  RuntimeStorageLayout.rs  RuntimeStoreRoot.rs  TokenCacheManager.rs  TtsCleaner.rs  TtsSegmenter.rs  lib.rs
core/examples/plugin-sdk-consumer/: Cargo.toml  README.md
core/examples/provider-api-consumer/: Cargo.toml  README.md
hosts/apple/: Cargo.toml
hosts/apple/src/: lib.rs
hosts/apple/src/tools/: mod.rs
hosts/common/operit-host-native-common/: Cargo.toml
hosts/common/operit-host-native-filesystem/: Cargo.toml
hosts/common/operit-host-native-http/: Cargo.toml
hosts/linux/: Cargo.toml
hosts/linux/src/: host_runtime_event.rs  lib.rs
hosts/ohos/: Cargo.toml  README.md
hosts/ohos/src/: audio_playback.rs  bluetooth.rs  filesystem.rs  http.rs  lib.rs  local_inference.rs  managed_runtime.rs  storage.rs  system_operation.rs  terminal.rs  tts_playback.rs
hosts/web/: Cargo.toml  README.md
hosts/web/src/: common.rs  lib.rs  runtime_event.rs  runtime_event_scheduler.rs  runtime_task_scheduler.rs
hosts/windows/: Cargo.toml
hosts/windows/src/: host_runtime_event.rs  lib.rs
sdk/: Cargo.toml
sdk/shared/context/: Cargo.toml
sdk/shared/host-api/: Cargo.toml
sdk/shared/store/: Cargo.toml
sdk/shared/tools/: Cargo.toml
sdk/shared/util/: Cargo.toml
sdk/toolpkg-runtime/: README.md
sdk/toolpkg-runtime/npm/: index.js  package.json
sdk/toolpkg-runtime/runtime/: Cargo.toml
sdk/toolpkg-runtime/types/: README.md  compose-dsl.d.ts  core.d.ts  index.d.ts  java-bridge.d.ts  okhttp.d.ts  runtime-context.d.ts  software_settings.d.ts  system.d.ts  tool-types.d.ts  toolpkg.d.ts
(+1118 files in other folders)
