[workspace]
members = [
    "shared/context",
    "shared/host-api",
    "shared/store",
    "shared/tools",
    "shared/util",
    "toolpkg-runtime/runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
json5 = "0.4"
regex = "1"
rquickjs = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
