[package]
name = "operit-cli"
version = "2.0.0-preview.3"
edition = "2021"
license = "MIT"
publish = false

[features]
default = ["embedded-web-access"]
embedded-web-access = ["dep:include_dir"]

[[bin]]
name = "operit2"
path = "src/main.rs"

[dependencies]
arboard = "3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
crossterm = "0.28"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
mdns-sd = "0.12"
include_dir = { version = "0.7", optional = true }
operit-core-proxy = { path = "../../core/crates/operit-core-proxy" }
operit-command-core = { path = "../../core/crates/operit-command-core" }
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-link = { path = "../../core/crates/operit-link" }
operit-model = { path = "../../core/crates/operit-model" }
operit-providers = { path = "../../core/crates/operit-providers" }
operit-runtime = { path = "../../core/crates/operit-runtime" }
operit-store = { path = "../../core/crates/operit-store" }
operit-tools = { path = "../../core/crates/operit-tools" }
operit-util = { path = "../../core/crates/operit-util" }
ratatui = "0.28"
unicode-width = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
operit-host-windows-native = { path = "../../hosts/windows" }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_WindowsProgramming"] }

[target.'cfg(target_os = "linux")'.dependencies]
operit-host-linux-native = { path = "../../hosts/linux" }
