[package]
name = "operit-host-apple-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
base64 = "0.22"
globset = "0.4.18"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.26"
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-host-native-common = { path = "../common/operit-host-native-common", default-features = false, features = ["http"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework = "3.7"

[target.'cfg(target_os = "macos")'.dependencies]
operit-host-native-common = { path = "../common/operit-host-native-common", default-features = false, features = ["http", "terminal"] }
tungstenite = "0.24"
