[package]
name = "operit-host-linux-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
base64 = "0.22"
globset = "0.4.18"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.26"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-host-native-common = { path = "../common/operit-host-native-common", default-features = false, features = ["http"] }
portable-pty = "0.9.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = "1"
serde_json = "1"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
zbus = { version = "4", features = ["blocking"] }
