[package]
name = "operit-host-ohos-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-host-native-common = { path = "../common/operit-host-native-common" }
operit-local-models = { path = "../../core/crates/operit-local-models" }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
