[package]
name = "operit-host-web"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-core-proxy = { path = "../../core/crates/operit-core-proxy" }
operit-runtime = { path = "../../core/crates/operit-runtime", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "Navigator", "Window"] }
