[package]
name = "operit-host-windows-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
operit-host-api = { path = "../../core/crates/operit-host-api" }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tungstenite = "0.24"
zip = { version = "2", default-features = false, features = ["deflate"] }
