[package]
name = "operit-host-windows-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
base64 = "0.22"
globset = "0.4.18"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.26"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
operit-host-api = { path = "../../core/crates/operit-host-api" }
operit-host-native-common = { path = "../common/operit-host-native-common", default-features = false, features = ["http", "scheduler"] }
portable-pty = "0.9.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = "1"
serde_json = "1"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.59", features = ["Win32_Devices_Bluetooth", "Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_Media_Multimedia", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Security_Credentials", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Power", "Win32_System_RemoteDesktop", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62.2", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Enumeration", "Foundation", "Foundation_Collections", "Storage_Streams"] }
windows-collections = "0.3.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
