[package]
name = "operit-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "operit2"
path = "src/main.rs"

[dependencies]
operit-host-windows = { path = "../../../hosts/desktop/windows/operit-host-windows" }
operit-runtime = { path = "../operit-runtime" }
serde_json.workspace = true
tokio.workspace = true
