[package]
name = "operit-command-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
operit-runtime = { path = "../operit-runtime" }
operit-providers = { path = "../operit-providers" }
operit-store = { path = "../operit-store" }
operit-host-api = { path = "../operit-host-api" }
operit-local-models = { path = "../operit-local-models" }
operit-model = { path = "../operit-model" }
operit-tools = { path = "../operit-tools" }
operit-util = { path = "../operit-util" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
