[package]
name = "operit-core-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
operit-host-api = { path = "../operit-host-api" }
operit-link = { path = "../operit-link" }
operit-link-access = { path = "../operit-link-access" }
operit-local-models = { path = "../operit-local-models" }
operit-model = { path = "../operit-model" }
operit-plugin-sdk = { path = "../operit-plugin-sdk" }
operit-providers = { path = "../operit-providers" }
operit-runtime = { path = "../operit-runtime", default-features = false, features = ["javascript"] }
operit-store = { path = "../operit-store" }
operit-tools = { path = "../operit-tools", default-features = false }
operit-util = { path = "../operit-util" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }

[build-dependencies]
quote = "1"
syn = { version = "2", features = ["full", "visit"] }

[dev-dependencies]
operit-host-native-common = { path = "../../../hosts/common/operit-host-native-common", default-features = false, features = ["storage"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
operit-command-core = { path = "../operit-command-core" }
mdns-sd = "0.12"
tokio = { workspace = true, features = ["rt-multi-thread"] }
