[package]
name = "operit-js-bridge"
version = "2.0.0-preview.3"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes = "0.8"
base64.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
md-5 = "0.10"
operit-host-api = { path = "../operit-host-api" }
operit-store = { path = "../operit-store" }
operit-tools = { path = "../operit-tools" }
operit-util = { path = "../operit-util" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(any(target_os = "android", target_os = "ios"))))'.dependencies]
rquickjs.workspace = true

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
rquickjs = { workspace = true, features = ["bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
quickjs-wasm-rs = "3.1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "XmlHttpRequest"] }
