[package]
name = "operit-local-models"
version = "2.0.0-preview.4"
edition.workspace = true
license.workspace = true
publish = true
description = "Local model manifests, registry contracts, and inference session interfaces for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-local-models"

[dependencies]
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
operit-util = { version = "2.0.0-preview.4", path = "../operit-util" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
bzip2-rs.workspace = true
tar.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
bzip2.workspace = true
