[package]
name = "operit-model"
version = "2.0.0-preview.3"
edition.workspace = true
license.workspace = true
publish = true
description = "Shared data models and transport structures for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-model"

[dependencies]
chrono.workspace = true
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
operit-util = { version = "2.0.0-preview.3", path = "../operit-util" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
