[package]
name = "operit-plugin-sdk"
version = "2.0.0-preview.4"
edition.workspace = true
license.workspace = true
publish = true
description = "Public plugin package models, ToolPkg parsers, and JavaScript execution contracts for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-plugin-sdk"

[dependencies]
chrono.workspace = true
json5.workspace = true
operit-host-api = { path = "../operit-host-api" }
regex.workspace = true
serde.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true
zip.workspace = true
sha2.workspace = true
uuid.workspace = true

[build-dependencies]
operit-plugin-sdk-codegen = { version = "=2.0.0-preview.4", path = "../operit-plugin-sdk-codegen" }
