[package]
name = "operit-providers"
version = "2.0.0-preview.3"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
operit-host-api = { path = "../operit-host-api" }
operit-model = { path = "../operit-model" }
operit-store = { path = "../operit-store" }
operit-tools = { path = "../operit-tools" }
operit-util = { path = "../operit-util" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
url = "2"
uuid.workspace = true
zip.workspace = true
json5.workspace = true
