[package]
name = "operit-providers"
version = "2.0.0-preview.3"
edition.workspace = true
license.workspace = true
publish = true
description = "Provider contracts and built-in provider implementations for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-providers"

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
json5.workspace = true
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
operit-model = { version = "2.0.0-preview.3", path = "../operit-model" }
operit-plugin-sdk = { version = "2.0.0-preview.3", path = "../operit-plugin-sdk" }
operit-store = { version = "0.1.0", path = "../operit-store" }
operit-tools = { version = "2.0.0-preview.3", path = "../operit-tools", default-features = false }
operit-util = { version = "2.0.0-preview.3", path = "../operit-util" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
url = "2"
uuid.workspace = true
zip.workspace = true
