[package]
name = "operit-runtime"
version = "2.0.0-preview.4"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["javascript"]
javascript = ["dep:operit-js-bridge", "operit-tools/javascript"]

[dependencies]
async-trait.workspace = true
aes = "0.8"
base64.workspace = true
chrono.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
json5.workspace = true
md-5 = "0.10"
operit-host-api = { path = "../operit-host-api" }
operit-js-bridge = { path = "../operit-js-bridge", optional = true }
operit-local-models = { path = "../operit-local-models" }
operit-model = { path = "../operit-model" }
operit-plugin-sdk = { path = "../operit-plugin-sdk" }
operit-providers = { path = "../operit-providers" }
operit-store = { path = "../operit-store" }
operit-tools = { path = "../operit-tools", default-features = false }
operit-util = { path = "../operit-util" }
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
url = "2"
uuid.workspace = true
zip.workspace = true

[dev-dependencies]

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
zip.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
lmdb.workspace = true
rusqlite.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(any(target_os = "android", target_os = "ios", target_env = "ohos"))))'.dependencies]
rquickjs.workspace = true

[target.'cfg(any(target_os = "android", target_os = "ios", target_env = "ohos"))'.dependencies]
rquickjs = { workspace = true, features = ["bindgen"] }

[target.'cfg(target_os = "android")'.dependencies]
lmdb.workspace = true
rusqlite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "XmlHttpRequest"] }
