[package]
name = "operit-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "Persistence stores, repositories, and synchronization primitives for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-store"

[dependencies]
base64.workspace = true
chacha20poly1305 = "0.10"
chrono.workspace = true
getrandom = "0.2"
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
operit-model = { version = "2.0.0-preview.3", path = "../operit-model" }
operit-util = { version = "2.0.0-preview.3", path = "../operit-util" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rusqlite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
