[package]
name = "operit-tools"
version = "2.0.0-preview.4"
edition.workspace = true
license.workspace = true
publish = true
description = "Tool execution, package management, MCP, and skill integrations for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-tools"

[features]
default = ["javascript"]
javascript = ["dep:quickjs-wasm-rs", "dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
async-trait.workspace = true
aes = "0.8"
base64.workspace = true
chrono.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
futures-util.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
json5.workspace = true
md-5 = "0.10"
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
operit-model = { version = "2.0.0-preview.4", path = "../operit-model" }
operit-plugin-sdk = { version = "2.0.0-preview.4", path = "../operit-plugin-sdk" }
operit-store = { version = "0.1.0", path = "../operit-store" }
operit-util = { version = "2.0.0-preview.4", path = "../operit-util" }
regex.workspace = true
serde.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
url = "2"
uuid.workspace = true
zip.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(any(target_os = "android", target_os = "ios", target_env = "ohos"))))'.dependencies]
rquickjs.workspace = true

[target.'cfg(any(target_os = "android", target_os = "ios", target_env = "ohos"))'.dependencies]
rquickjs = { workspace = true, features = ["bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
quickjs-wasm-rs = { version = "3.1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "XmlHttpRequest"], optional = true }

[build-dependencies]
operit-plugin-sdk-codegen = { version = "=2.0.0-preview.4", path = "../operit-plugin-sdk-codegen" }
