[package]
name = "operit-util"
version = "2.0.0-preview.3"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
operit-host-api = { path = "../operit-host-api" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
