[package]
name = "operit-util"
version = "2.0.0-preview.4"
edition.workspace = true
license.workspace = true
publish = true
description = "Shared utility services and stream primitives for Operit."
readme = "README.md"
repository = "https://github.com/AAswordman/Operit2"
documentation = "https://docs.rs/operit-util"

[dependencies]
operit-host-api = { version = "0.1.0", path = "../operit-host-api" }
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
