[package]
name = "operit-host-native-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
base64 = "0.22"
globset = "0.4.18"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.26"
operit-host-api = { path = "../../../core/crates/operit-host-api" }
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
