[package]
name = "operit-host-native-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = []
fs = ["dep:operit-host-native-filesystem"]
http = ["dep:operit-host-native-http"]
scheduler = ["dep:operit-host-native-scheduler"]
storage = ["dep:operit-host-native-storage"]
terminal = ["dep:operit-host-native-terminal"]

[dependencies]
operit-host-native-filesystem = { path = "../operit-host-native-filesystem", optional = true }
operit-host-native-http = { path = "../operit-host-native-http", optional = true }
operit-host-native-scheduler = { path = "../operit-host-native-scheduler", optional = true }
operit-host-native-storage = { path = "../operit-host-native-storage", optional = true }
operit-host-native-terminal = { path = "../operit-host-native-terminal", optional = true }
