[package]
name = "operit-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
json5.workspace = true
operit-host-api = { path = "../host-api" }
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
