[package]
name = "operit-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
operit-context = { path = "../context" }
operit-host-api = { path = "../host-api" }
operit-store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
